forked new git repo

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Bonus Calculator Object Challenge</title>
+    <script src="jquery.js"></script>
     <script src="client.js" charset="utf-8"></script>
   </head>
   <body>
